FIX: Updates Module Client
