# src/Modules/Students/Infrastructure/Routes/api.php
@@ -4,6 +4,7 @@ declare(strict_types=1);
 
 use Illuminate\Support\Facades\Route;
 use Modules\Students\Infrastructure\Http\Controllers\Api\StudentController;
+use Modules\Students\Infrastructure\Http\Controllers\Api\StudentExportController;
 
 /**
  * Student Context - API routes.
@@ -11,7 +12,7 @@ use Modules\Students\Infrastructure\Http\Controllers\Api\StudentController;
 Route::prefix('admin')->group(function () {
     Route::get('/', [StudentController::class, 'index'])->name('api.admin.student.index');
     Route::post('/', [StudentController::class, 'store'])->name('api.admin.student.store');
-    Route::get('/export', [StudentController::class, 'export'])->name('api.admin.student.export');
+    Route::get('/export', [StudentExportController::class, '__invoke'])->name('api.admin.student.export');
     Route::get('/{uuid}', [StudentController::class, 'show'])->name('api.admin.student.show')->whereUuid('uuid');
     Route::put('/{uuid}', [StudentController::class, 'update'])->name('api.admin.student.update')->whereUuid('uuid');
     Route::delete('/{uuid}', [StudentController::class, 'destroy'])->name('api.admin.student.destroy')->whereUuid('uuid');
